<resources>
    <string name="app_name">LabTask5</string>
    <string name="add_note">Add Note</string>
    <string-array name="language_array">
        <item>English</item>
        <item>Українська</item>
    </string-array>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="language">Language</string>
    <string name="note_name" />
    <string name="note_description" />
    <string name="save" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search notes...</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="select_image">Select Image</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="all_priority">All</string>
    <string name="low_priority">Low priority</string>
    <string name="medium_priority">Medium</string>
    <string name="high_priority">High</string>
    <string name="select_filter">Select filter</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="select_theme">Select theme</string>
    <string name="apply">apply</string>
    <string name="select_font_size">select_font_size</string>
</resources>
