<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NoteEditingFragment">

    <EditText
            android:id="@+id/editTextName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/note_name"
            android:inputType="text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp" />

    <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/note_description"
            android:inputType="textMultiLine"
            app:layout_constraintTop_toBottomOf="@id/editTextName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp" />

    <Spinner
            android:id="@+id/spinnerPriority"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/priority_array"
            app:layout_constraintTop_toBottomOf="@id/editTextDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp" />

    <Button
            android:id="@+id/selectDateButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp"
            android:layout_marginTop="114dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnerPriority"
            app:layout_constraintEnd_toStartOf="@+id/buttonSave"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="176dp"
            app:layout_constraintBottom_toTopOf="@+id/noteImageView" />

    <Button
            android:id="@+id/selectTimeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_time"
            android:layout_margin="16dp"
            android:layout_marginBottom="99dp"
            app:layout_constraintBottom_toTopOf="@+id/selectImageButton"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toEndOf="@+id/noteImageView"
            android:layout_marginTop="197dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnerPriority"
            android:layout_marginEnd="42dp"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/selectedDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/selectDateButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="16dp" />

    <ImageView
            android:id="@+id/noteImageView"
            android:layout_width="227dp"
            android:layout_height="153dp"
            android:scaleType="centerCrop"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonSave"
            app:layout_constraintEnd_toStartOf="@+id/selectImageButton"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="336dp" />

    <Button
            android:id="@+id/selectImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_image"
            android:layout_margin="16dp"
            android:layout_marginTop="191dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnerPriority"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="505dp"
            android:layout_marginStart="18dp"
            app:layout_constraintStart_toEndOf="@+id/noteImageView"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" />

    <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintTop_toBottomOf="@id/spinnerPriority"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.479" />

</androidx.constraintlayout.widget.ConstraintLayout>